--- a/.babelrc
+++ b/.babelrc
@@ -38,6 +38,7 @@
     ],
     "@babel/plugin-proposal-nullish-coalescing-operator",
     "@babel/plugin-proposal-do-expressions",
-    "@babel/plugin-proposal-function-bind"
+    "@babel/plugin-proposal-function-bind",
+    "react-hot-loader/babel"
   ]
 }
