--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "webpack-dev-server",
     "format": "prettier --write \"{src,__{tests,mocks}__}/**/*.{js,jsx}\"",
     "lint": "eslint --max-warnings 0 --ext .js,.jsx ./src",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "husky": {
     "hooks": {
@@ -40,6 +40,7 @@
     "@babel/plugin-syntax-import-meta": "^7.0.0",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
+    "babel-jest": "^24.1.0",
     "babel-loader": "^8.0.5",
     "eslint": "^5.13.0",
     "eslint-config-airbnb": "^17.1.0",
@@ -51,6 +52,7 @@
     "eslint-plugin-react": "^7.12.4",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.3.1",
+    "jest": "^24.1.0",
     "lint-staged": "^8.1.3",
     "prettier": "^1.16.4",
     "webpack": "^4.29.1",
