--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     }
   },
   "dependencies": {
+    "connected-react-router": "^6.2.2",
+    "history": "^4.7.2",
     "prop-types": "^15.6.2",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-hot-loader": "^4.6.5",
     "react-redux": "^6.0.0",
+    "react-router": "^4.3.1",
     "redux": "^4.0.1",
     "reselect": "^4.0.0"
   },
