--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "format": "prettier --write \"{src,__{tests,mocks}__}/**/*.{js,jsx}\"",
     "lint": "eslint --max-warnings 0 --ext .js,.jsx ./src",
     "test": "jest",
-    "coverage": "jest --coverage"
+    "coverage": "jest --coverage",
+    "server": "json-server json-server/data.json --watch"
   },
   "husky": {
     "hooks": {
@@ -17,6 +18,7 @@
   "dependencies": {
     "connected-react-router": "^6.2.2",
     "history": "^4.7.2",
+    "json-server": "^0.14.2",
     "prop-types": "^15.6.2",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
