--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     }
   },
   "dependencies": {
-    "connected-react-router": "^6.2.2",
+    "axios": "^0.18.0",
+    "connected-react-router": "^6.3.0",
     "history": "^4.7.2",
     "json-server": "^0.14.2",
     "prop-types": "^15.6.2",
@@ -24,8 +25,10 @@
     "react-dom": "^16.8.0",
     "react-hot-loader": "^4.6.5",
     "react-redux": "^6.0.0",
-    "react-router": "^4.3.1",
+    "react-router": "^4.4.0-beta.6",
+    "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0"
   },
   "devDependencies": {
