--- a/.babelrc
+++ b/.babelrc
@@ -40,5 +40,8 @@
     "@babel/plugin-proposal-do-expressions",
     "@babel/plugin-proposal-function-bind",
     "react-hot-loader/babel"
+  ],
+  "ignore": [
+    "node_modules"
   ]
 }
