--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     }
   },
   "dependencies": {
+    "antd": "^3.15.0",
     "axios": "^0.18.0",
     "connected-react-router": "^6.3.2",
+    "css-loader": "^2.1.1",
     "history": "^4.7.2",
     "json-server": "^0.14.2",
     "prop-types": "^15.7.2",
@@ -29,7 +31,8 @@
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "style-loader": "^0.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
@@ -61,10 +64,12 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
+    "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.3.1",
     "jest": "^24.5.0",
     "lint-staged": "^8.1.5",
+    "mini-css-extract-plugin": "^0.5.0",
     "prettier": "^1.16.4",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
