--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "css-loader": "^2.1.1",
     "history": "^4.7.2",
     "json-server": "^0.14.2",
+    "lodash": "^4.17.11",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
