--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,9 @@
   },
   "globals": {
     "document": false,
+    "shallow": true,
+    "render": true,
+    "mount": true
   },
   "env": {
     "jest": true
