--- a/package.json
+++ b/package.json
@@ -57,6 +57,9 @@
     "@babel/preset-react": "^7.0.0",
     "babel-jest": "^24.5.0",
     "babel-loader": "^8.0.5",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.12.1",
+    "enzyme-to-json": "^3.3.5",
     "eslint": "^5.15.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.1.0",
